# bouncing_shapes

./: Cargo.toml  readme.md
src/: SpawnShapes.rs  collider_plugin.rs  components.rs  main.rs  player_plugin.rs  spawn_shapes.rs
