[package]
name = "bouncing_shapes"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.1"
rand = "*"
bevy_rapier2d = { version = "0.28.0", features = [ "simd-stable", "debug-render-2d" ] }